<resources>
    <string name="app_name">ECO4P</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="sign_up_an_account">Sign up an account</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="menu_nav_bar_profile">Profile</string>
    <string name="menu_nav_bar_feed">Feed</string>
    <string name="menu_nav_bar_location">Location</string>
    <string name="jinny">Jinny</string>
    <string name="date">13/01/2016</string>
    <string name="hanoi">Hanoi</string>
    <string name="studying_at_res">Studying at RES (description).</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_timeline">Your Timeline</string>
    <string name="rosie">Graves</string>
    <string name="add_story">Add story</string>
    <string name="christina">Trundle</string>
    <string name="susan">Gnar</string>
    <string name="kaisa">Kaisa</string>
    <string name="photos_videos">Photos/Videos</string>
    <string name="location">location</string>
    <string name="check_in">Check in</string>
    <string name="what_s_on_your_mind">What\'s on your mind</string>
    <string name="renekton">Renekton</string>
    <string name="location_00_00">Dong Da High School - 13:30</string>
    <string name="username">Username</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="age">Age</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="level_2_password">Level 2 password</string>
    <string name="confirm_your_level_2_password">Confirm your level 2 password</string>
    <string name="register">Register</string>
    <string name="register_form">Register form</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name">Name</string>
    <string name="verify_your_email">Enter Verification Code</string>
    <string name="enter_verification_code">A code was sent to your e-mail. Please enter the code here once it arrives</string>
    <string name="verify">Verify</string>
    <string name="enter_code">Enter code</string>
    <string name="send_code_again">Send code again</string>
    <string name="diary">Diary</string>
    <string name="icon">Icon</string>
    <string name="_16_6">16/6</string>
    <string name="_28_6">28/6</string>
    <string name="_16_7">16/7</string>
    <string name="_22_8">22/8</string>
    <string name="messenger">Messenger</string>
    <string name="notification">Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_settings">Account settings</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="text">Text</string>
    <string name="new_name">New name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_name">Edit name</string>
    <string name="your_password">Your password</string>
    <string name="change_dob">Change date of birth</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="current_password">Current password</string>
    <string name="comming_soon">Comming Soon! :D</string>
    <string name="post">POST</string>
    <string name="on_science_class">On science class</string>
    <string name="there_re_no_post_here">There is no post here!</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_your_avatar">Change your avatar</string>


</resources>
