<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_location"
        android:enabled="true"
        android:icon="@drawable/ic_location"
        android:title="@string/menu_nav_bar_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_new_feed"
        android:title="@string/menu_nav_bar_feed"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_nav_bar_profile"
        app:showAsAction="ifRoom" />
</menu>